[package]
name = "cycle-certs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
chrono = { version = "0.4.23", features = ["serde"] }
clap = { version = "4.0.32", features = ["derive"] }
config = { version = "0.13.3", features = ["toml"] }
directories = "4.0.1"
env_logger = "0.10.0"
log = "0.4.17"
reqwest = { version = "0.11.13", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.91"
termcolor = "1.1.3"
